# myass

./: .gitignore  CLAUDE.md  README.md  install.sh  install_admin.md  install_admin.sh  install_quadrant.md  install_quadrant.sh  pyproject.toml  terraform.py
bots/bot_cve/: README.md  build.py  manifest.json  workflow.json
bots/bot_cve/data/: cvss.json  cwe_attack.json
bots/bot_cve/lib/: attack.py  cvss.py  http.py  io.py  minipdf.py  text.py
bots/bot_cve/scripts/: task01_split.py  task03_fetch.py  task04_kev.py  task05_exploit.py  task06_refs.py  task07_ner.py  task08_save.py  task09_consolidate.py  task10_pdf.py
bots/bot_cve/test/: run_pipeline.py
bots/bot_ip/: README.md  build.py  manifest.json  workflow.json
bots/bot_ip/lib/: http.py  minipdf.py  net.py
client/web/: .env.example  .htaccess  README.md  deploy.py  gen_env.py  index.html  index.php  lib.php  setup.php
client/web/db/: schema.sql
doc/: DEPLOY.md  analise-monero.md  analise-tanenbaum.md  arquitetura-ascii.md  arquitetura.md  bot_ip_urlhaus.md  myass-apresentacao.html  redesign-minimum-knowledge-core.md
examples/: run_real_quadrant.py
src/myass/: __init__.py  errlog.py
tests/: test_admin_e2e.py  test_admin_gui.py  test_broker.py  test_classes.py  test_clients.py  test_core_e2e.py  test_edge_crypto.py  test_edge_gateway.py  test_errlog.py  test_executor.py  test_inputs.py  test_noise.py  test_project.py  test_protocol_e2e.py  test_quadrant_e2e.py  test_relay.py  test_ring.py  test_scheduler.py  test_storage.py  test_tor.py  test_vai_e2e.py  test_wire_transfer.py  test_workflow.py
(+60 files in other folders)
